syntax = "proto3";

option csharp_namespace = "HomeCtl.Services.Host";

package homectl.services.host;

service HostInterface {
	rpc ProcessIntent (ProcessIntentRequest) returns (ProcessIntentResponse);
}

message ProcessIntentRequest {
}

message ProcessIntentResponse {
}